# Keylogging_Benchmark

./: .gitignore  CMakeLists.txt  README.md  plots.py  run.bat
Client/: CMakeLists.txt  build.sh
Client/Client/: CMakeLists.txt
Client/Client/src/: client.c
Client/Client/src/headers/: client.h
Client/Execution/: CMakeLists.txt  main.c
Crypto/: 256BuffSize.rar  CMakeLists.txt
Crypto/Decrypt/: CMakeLists.txt
Crypto/Encrypt/: CMakeLists.txt
Crypto/Execution/: CMakeLists.txt  main.cpp
Crypto/res/: kek.txt  text.txt
Keylogger/: CMakeLists.txt  CMakeSettings.json  build.sh
Keylogger/Execution/: CMakeLists.txt  main.cpp
Keylogger/Keylogging/: CMakeLists.txt
Keylogger/Keylogging/src/: keylogging.cpp
Keylogger/Keylogging/src/headers/: keylogging.hpp
Server/: CMakeLists.txt
Server/Execution/: CMakeLists.txt  main.c
Server/Server/: CMakeLists.txt
Server/Server/src/: server.c
Server/Server/src/headers/: server.h
benchmarks/: 128.txt  2048.txt  256.txt  32.txt  4096.txt  512.txt  64.txt
benchmarks/not_used/: 1024.txt
